--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "@types/jest": "^29.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "prisma": "^4.9.0",
-    "protocols": "^2.0.1"
+    "protocols": "^2.0.1",
+    "ts-jest": "^29.0.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
