--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "prisma": "^4.9.0",
+    "prisma-client": "0.0.0",
+    "prisma-client-lib": "^1.34.12",
     "protocols": "^2.0.1",
     "ts-jest": "^29.0.5"
   },
