--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/supertest": "^2.0.12",
     "dotenv-cli": "^7.0.0",
     "jest": "^29.4.1",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
