--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
   "author": "Vinicius Assis",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@prisma/client": "^4.9.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/faker": "^6.6.9",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "http-status": "^1.6.2",
     "prisma": "^4.9.0",
     "prisma-client": "0.0.0",
